Added user model first draft

--- a/src/user-api/user-api.fsproj
+++ b/src/user-api/user-api.fsproj
@@ -11,7 +11,8 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AppHandlers.fs" />
+    <Compile Include="Models\User.fs" />
+    <Compile Include="Handlers\AppHandlers.fs" />
     <Compile Include="Setup.fs" />
   </ItemGroup>
   <ItemGroup>
