--- a/src/user-api/user-api.fsproj
+++ b/src/user-api/user-api.fsproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DebugType>portable</DebugType>
@@ -13,6 +13,7 @@
   <ItemGroup>
     <Compile Include="Models\User.fs" />
     <Compile Include="Handlers\AppHandlers.fs" />
+    <Compile Include="Router.fs" />
     <Compile Include="Setup.fs" />
   </ItemGroup>
   <ItemGroup>
